fixed text alignment

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -10,6 +10,7 @@
   &.pressed {
     border-color: #7b7b7b;
     border-width: 1px ;
+    text-align: center;
   }
 
   span { 
